<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>carter_navigation</name>
  <version>0.1.0</version>
  <description>
    The carter_navigation package
  </description>

  <maintainer email="isaac-sim@todo.todo">isaac sim</maintainer>

  <license>Copyright (c) 2022, NVIDIA CORPORATION. All rights reserved.
    NVIDIA CORPORATION and its licensors retain all intellectual property
    and proprietary rights in and to this software, related documentation
    and any modifications thereto.  Any use, reproduction, disclosure or
    distribution of this software and related documentation without an express
    license agreement from NVIDIA CORPORATION is strictly prohibited.</license>
  
  <url type="Documentation">https://docs.omniverse.nvidia.com/app_isaacsim/app_isaacsim/overview.html</url>
  <url type="Forums">https://forums.developer.nvidia.com/c/agx-autonomous-machines/isaac/simulation</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>launch</build_depend>
  <build_depend>launch_ros</build_depend>

  <build_depend>joint_state_publisher</build_depend>

  <build_depend>rviz2</build_depend>

  <build_depend>nav2_amcl</build_depend>
  <build_depend>nav2_bringup</build_depend>
  <build_depend>nav2_bt_navigator</build_depend>
  <build_depend>nav2_costmap_2d</build_depend>
  <build_depend>nav2_core</build_depend>
  <build_depend>nav2_dwb_controller</build_depend>
  <build_depend>nav2_lifecycle_manager</build_depend>
  <build_depend>nav2_map_server</build_depend>
  <build_depend>nav2_recoveries</build_depend>
  <build_depend>nav2_planner</build_depend>
  <build_depend>nav2_msgs</build_depend>
  <build_depend>nav2_navfn_planner</build_depend>
  <build_depend>nav2_rviz_plugins</build_depend>
  <build_depend>nav2_behavior_tree</build_depend>
  <build_depend>nav2_util</build_depend>
  <build_depend>nav2_voxel_grid</build_depend>
  <build_depend>nav2_controller</build_depend>
  <build_depend>nav2_waypoint_follower</build_depend>
  <build_depend>pointcloud_to_laserscan</build_depend>
  <build_depend>navigation2</build_depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
