<?xml version="1.0"?>
<package format="2">
  <name>carter_2dnav</name>
  <version>0.1.0</version>
  <description>The carter_2dnav package</description>

  <maintainer email="isaac-sim@todo.todo">isaac sim</maintainer>
  
  <license>Copyright (c) 2022, NVIDIA CORPORATION. All rights reserved.
    NVIDIA CORPORATION and its licensors retain all intellectual property
    and proprietary rights in and to this software, related documentation
    and any modifications thereto.  Any use, reproduction, disclosure or
    distribution of this software and related documentation without an express
    license agreement from NVIDIA CORPORATION is strictly prohibited.</license>

  <url type="Documentation">https://docs.omniverse.nvidia.com/app_isaacsim/app_isaacsim/overview.html</url>
  <url type="Forums">https://forums.developer.nvidia.com/c/agx-autonomous-machines/isaac/simulation</url>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>navigation</build_depend>
  <build_depend>pointcloud_to_laserscan</build_depend>
  
  <build_export_depend>navigation</build_export_depend>
  <build_export_depend>pointcloud_to_laserscan</build_export_depend>
  
  <exec_depend>navigation</exec_depend>
  <exec_depend>pointcloud_to_laserscan</exec_depend>
  
  <export>

  </export>
</package>
